Update Fraud Detection with CNN (Kelompok 14).ipynb

--- a/Fraud Detection with CNN (Kelompok 14).ipynb
+++ b/Fraud Detection with CNN (Kelompok 14).ipynb
@@ -5,11 +5,9 @@
    "id": "afddcd1b",
    "metadata": {},
    "source": [
-    "Kelompok 14:\n",
+    "By :\n",
     "\n",
-    "- 12S19023 –  Jeremia Pratama Ambarita\n",
-    "- 12S19033 – San Antonio Limbong \n",
-    "- 12S19037 – Paulus Martua Lawrenzo Pratama Tambunan"
+    "- San Antonio Limbong"
    ]
   },
   {
